--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-# Ignore Python virtual environments
+
+
+# Ignore virtual environments and large binaries
 venv/
 env/
 */venv/
 */env/
-
-# Python cache and compiled files
 __pycache__/
 *.pyc
 *.pyd
-
-# Large binaries
 *.dll
 *.so
 *.lib
-
-# Ignore system files
-.DS_Store
-Thumbs.db
